--- a/index.html
+++ b/index.html
@@ -47,18 +47,22 @@
         <div class="wrapper main-wrapper">
             <div class="main"> 
                 <div class="main-title"> 
-                    <a class="link" href="#"> &#448 ПОСТАВКА &#448 </a>
+                    <a class="link" href="#"> ПОСТАВКА &#448 </a>
                     <a class="link" href="#"> МОНТАЖ &#448 </a> 
-                    <a class="link" href="#"> ГАРАНТИЯ &#448 </a> 
+                    <a class="link" href="#"> ГАРАНТИЯ </a> 
                 </div>
                 <p class="professional-experience"> Более 25 лет  в Дальневосточном регионе</p>
                 <div class="presentation">  
                     <div class="presentation-item foto-section">
                         <img class="foto" src="./img/Фото видеокамера наружного наблюдения (1).png" alt="видеокамера">
-                        <img class="foto smaller-foto" src="./img/эмр1.jpg" alt="прокладка кабеля">
+                        <!-- <img class="foto smaller-foto" src="./img/эмр1.jpg" alt="прокладка кабеля"> -->
                     </div>
                     <div class="presentation-item btn-section">
-                        
+                        <div class="presentation-btns">
+                            <!-- <a href="mailto:video-tex@yandex"> <button class="presentation-btn"> Отправить <br> техзадание  </button></a>  -->
+                            <a href="#"> <button class="presentation-btn">  Оборудование  </button></a> 
+                            <a href="#"> <button class="presentation-btn second-btn">  Монтаж  </button></a> 
+                        </div>
                         <div class="presentation-info">
                             <a href="#"> системы контроля доступа  </a>
                             <a href="#"> охранно-пожарная сигнализация </a> 
@@ -67,14 +71,10 @@
                             <a href="#"> электромонтажные работы  </a> 
                             <a href="#"> исполнительная документация  </a> 
                         </div>
-                        <div class="presentation-btns">
-                            <!-- <a href="mailto:video-tex@yandex"> <button class="presentation-btn"> Отправить <br> техзадание  </button></a>  -->
-                            <a href="#"> <button class="presentation-btn">  Оборудование <br> Услуги  </button></a> 
-                            <a href="#"> <button class="presentation-btn second-btn">  Выполненные <br> проекты  </button></a> 
-                        </div>
+
                     </div>
                     <div class="presentation-item foto-section">
-                        <img class="foto smaller-foto" src="./img/fire-alarm3.jpg" alt="турникеты СКУД">
+                        <!-- <img class="foto smaller-foto" src="./img/fire-alarm3.jpg" alt="турникеты СКУД"> -->
                         <img class="foto" src="./img/slide2.png" alt="электро оборудование">
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                     <a href="#"></a><button class="cross-btn presentation-btn"> Галерея </button></a> 
                 </div>
                 <div class="selection"> 
-                    <h2 class="selection-title"> <a href="#"> <span>Выберите услугу</span></a>, остальное - наша работа!   </h2>
+                    <h2 class="selection-title"> <a href="#"> <span>Выбор Ваш</span></a> - работа наша! </h2>
                     <div class="selection-items grid">        
                         <div class="selection-item cover"> 
                             <a class="cover__link" href="#"> <h2 class="cover__title">системы контроля доступа </h2>  
