--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         </div>
                         <div class="feedback-btns"> 
                             <a href="tel:89242172474"><button class="feedback-btn cross-btn presentation-btn"> Позвонить </button></a>
-                            <a href="mailto:video-tex@yandex"><button class="second-btn cross-btn presentation-btn"> Написать </button></a>
+                            <a href="mailto:video-tex@yandex"><button class="feedback-second-btn second-btn cross-btn presentation-btn"> Написать </button></a>
                         </div>
                     </div>
                 </div>
