--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     </div>
 
                     <div class="feedback">
-                        <div>  
+                        <div class="prodgects">  
                             <h2 class="feedback-title"> Обсудим ваш <br> проект сейчас? </h2>
                             <ul class="feedback-info">
                                 <li> <span> Поможем подобрать оборудование</span> по вашему проекту и уложиться в бюджет </li>
@@ -237,7 +237,7 @@
                         <li><a href="#"> Галерея   </a> </li>
                     </ul>
                 </div>
-                <div class="footer-item ">
+                <div class="footer-item">
                     <h4> Услуги </h4>
                     <ul>
                         <li><a href="#"> Системы контроля доступа  </a></li>
