--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <div class="footer-item ">
                     <h4>Навигация</h4>
                     <ul>
-                        <li><a href="#"> Главная  </a></li>
+                        <li><a href="#"> Оборудование  </a></li>
                         <li><a href="#"> Услуги  </a></li>
                         <li><a href="#"> Сотрудничество  </a> </li>
                         <li><a href="#"> Вакансии   </a> </li>
