--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="main"> 
                 <div class="main-title"> 
                     <a class="link" href="#"> ПОСТАВКА &#448 </a>
-                    <a class="link" href="#"> МОНТАЖ &#448 </a> 
+                    <a class="link" href="./html/services.html"> МОНТАЖ &#448 </a> 
                     <a class="link" href="#"> ГАРАНТИЯ </a> 
                 </div>
                 <p class="professional-experience"> Более 25 лет  в Дальневосточном регионе</p>
@@ -61,7 +61,7 @@
                         <div class="presentation-btns">
                             <!-- <a href="mailto:video-tex@yandex"> <button class="presentation-btn"> Отправить <br> техзадание  </button></a>  -->
                             <a href="#"> <button class="presentation-btn">  Оборудование  </button></a> 
-                            <a href="#"> <button class="presentation-btn second-btn">  Монтаж  </button></a> 
+                            <a href="./html/services.html"> <button class="presentation-btn second-btn">  Монтаж  </button></a> 
                         </div>
                         <div class="presentation-info">
                             <a href="#"> системы контроля доступа  </a>
@@ -230,7 +230,7 @@
                     <h4>Навигация</h4>
                     <ul>
                         <li><a href="#"> Оборудование  </a></li>
-                        <li><a href="#"> Услуги  </a></li>
+                        <li><a href="./html/services.html"> Услуги  </a></li>
                         <li><a href="#"> Сотрудничество  </a> </li>
                         <li><a href="#"> Вакансии   </a> </li>
                         <li><a href="#"> Лицензии  </a> </li>
@@ -238,7 +238,7 @@
                     </ul>
                 </div>
                 <div class="footer-item">
-                    <h4> Услуги </h4>
+                    <h4> <a href="./html/services.html"> Услуги </a></h4>
                     <ul>
                         <li><a href="#"> Системы контроля доступа  </a></li>
                         <li><a href="#"> Охранно-пожарная сигнализация  </a> </li>
